Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,31 +444,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 13 columns):\n",
-      "Unnamed: 0     891 non-null object\n",
-      "PassengerId    891 non-null object\n",
-      "Survived       891 non-null object\n",
-      "Pclass         891 non-null object\n",
-      "Name           891 non-null object\n",
-      "Sex            891 non-null object\n",
-      "Age            891 non-null object\n",
-      "SibSp          891 non-null object\n",
-      "Parch          891 non-null object\n",
-      "Ticket         891 non-null object\n",
-      "Fare           891 non-null object\n",
-      "Cabin          891 non-null object\n",
-      "Embarked       891 non-null object\n",
-      "dtypes: object(13)\n",
-      "memory usage: 90.6+ KB\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-49d51e941cb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Quick function to convert every value in the DataFrame to a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstring_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplymap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mstring_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
